js and html file's crucial updation

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
            <button type="button" class="btn"> 0</button>
            <button type="button" class="btn"> .</button>
            <button type="button" class="btn" value="3.14159265359"> π</button>
-           <button type="button">ANS</button>
+           <button type="button" id="ansButton">ANS</button>
            <button type="button" id="equalsButton" onclick="result()">=</button>
         </div>
      </div>
